# commerce-flow

backend/: .env.example  Taskfile.yml  docker-compose.yaml  main.py  pyproject.toml
backend/api/v1/: __init__.py
backend/api/v1/auth/: auth.py
backend/api/v1/health/: health.py
backend/api/v1/user/: user.py
backend/app/controllers/: __init__.py  auth.py  user.py
backend/app/models/: user.py
backend/app/repositories/: user.py
backend/app/schemas/requests/: auth.py
backend/app/schemas/responses/: auth.py  user.py
backend/core/: config.py  server.py
backend/core/controller/: base.py
backend/core/database/: session.py
backend/core/dependencies/: controllers.py
backend/core/exceptions/: __init__.py  base.py
backend/core/factory/: factory.py
backend/core/repository/: base.py
backend/migrations/: env.py
backend/migrations/versions/: 8fa2a6a27f88_init_db.py  e4f5584a6c35_init_db.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py
backend/tests/api/v1/auth/: test_auth.py
backend/tests/api/v1/health/: test_health.py
backend/tests/factory/: user.py
frontend/: .prettierrc  package.json
